--- a/views/popup.html
+++ b/views/popup.html
@@ -34,36 +34,36 @@
         таймер-трекер
         доки
     -->
-    <div>
-        <a href="fields.popup.html" class="CTA white-matte" style="padding: 5px 10px 5px 10px; width: 160px;">
+    <div style="padding: 10px;">
+        <a href="fields.popup.html" class="CTA white-matte choosepop">
             <img src="../img/fields.png" width="15px" height="15px">
             <h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px;">Fields</h2>
         </a>
-        <a href="#" class="CTA white-matte" style="padding: 5px 10px 5px 10px; width: 160px;">
+        <a href="#" class="CTA white-matte choosepop">
             <h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px;">Statuses</h2>
         </a>
-        <a href="#" class="CTA white-matte" style="padding: 5px 10px 5px 10px; width: 160px;">
+        <a href="#" class="CTA white-matte choosepop">
             <h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px;">Tasks</h2>
         </a>
-        <a href="#" class="CTA white-matte" style="padding: 5px 10px 5px 10px; width: 160px;">
+        <a href="#" class="CTA white-matte choosepop">
             <img src="../img/mails.png"" width="15px" height="15px">
-            <h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px; width: 160px;">Mails</h2>
+            <h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px;">Mails</h2>
         </a>
-        <a href="#" class="CTA white-matte" style="padding: 5px 10px 5px 10px;">
-            <h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px; width: 160px;">Tasks</h2>
+        <a href="#" class="CTA white-matte choosepop">
+            <h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px;">Tasks</h2>
         </a>
-        <a href="#" class="CTA white-matte" style="padding: 5px 10px 5px 10px;">
-            <h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px; width: 160px;">Comments</h2>
+        <a href="#" class="CTA white-matte choosepop">
+            <h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px;">Comments</h2>
         </a>
-        <a href="#" class="CTA white-matte" style="padding: 5px 10px 5px 10px;">
-            <h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px; width: 160px;">Cheklist</h2>
+        <a href="#" class="CTA white-matte choosepop">
+            <h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px;">Cheklist</h2>
         </a>
-        <a href="#" class="CTA white-matte" style="padding: 5px 10px 5px 10px;">
-            <h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px; width: 160px;">Times</h2>
+        <a href="#" class="CTA white-matte choosepop">
+            <h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px;">Times</h2>
         </a>
-        <a href="#" class="CTA white-matte" style="padding: 5px 10px 5px 10px;">
+        <a href="#" class="CTA white-matte choosepop">
             <img src="../img/folders.png" width="15px" height="15px">
-            <h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px; width: 160px;">Documents</h2>
+            <h2 style="margin-left: 10px; margin-bottom: 0px; margin-right: 10px;">Documents</h2>
         </a>
     </div>
 
