--- a/public/css/popup.css
+++ b/public/css/popup.css
@@ -44,3 +44,13 @@ select { height: 30px; }
     .chooseblock:first-child{
         margin-top: 0px;
     }
+
+    .choosepop{
+        padding: 5px 10px 5px 10px; 
+        width: 260px;
+        margin-top: 10px;
+    }
+
+    .choosepop:first-child{
+        margin-top: 0px;
+    }
