--- a/views/fields.popup.html
+++ b/views/fields.popup.html
@@ -20,94 +20,95 @@
   <body>
     <div id="back">
     </div>
+    <div  style="padding: 10px; width: 280px;">
+    
+        <a href="popup.html" class="left-button white-matte">
+            <span style="padding-left: 12px;">
+            &#8592;
+            </span>
+        </a>
+        <p style="margin-left: 20px; margin-top: -20px;">
+            Back
+        </p>
 
-    <a href="popup.html" class="left-button white-matte">
-        <span style="padding-left: 12px;">
-        &#8592;
-        </span>
-    </a>
-    <p style="margin-left: 20px; margin-top: -20px;">
-        Back
-    </p>
+        <hr>
 
-    <hr>
-
-    <div class="card block2 chooseblock">
-        <div style="background: url('../img/fields.png') no-repeat; background-size: contain;"></div>
-        <div>
-            <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
-              Page with input fields
-            </p>
-        </div>
-        <div>
-            <a href="fieldssettings.popup.html" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
-                <p style="margin-left: 0px; margin-bottom: 0px;">
-                  Fields
+        <div class="card block2 chooseblock">
+            <div style="background: url('../img/fields.png') no-repeat; background-size: contain;"></div>
+            <div>
+                <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
+                Page with input fields
                 </p>
-            </a>
-            <a href="addfield.popup.html" id="addfield" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
-                <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add</p>
-            </a>
+            </div>
+            <div>
+                <a href="fieldssettings.popup.html" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
+                    <p style="margin-left: 0px; margin-bottom: 0px;">
+                    Fields
+                    </p>
+                </a>
+                <a href="addfield.popup.html" id="addfield" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
+                    <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add</p>
+                </a>
+            </div>
+        </div>
+
+        <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
+            <div style="background: url('../img/group.png') no-repeat; background-size: contain;"></div>
+            <div>
+                <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
+                Page with dynamic input fields groups
+                </p>
+            </div>
+            <div>
+                <a href="#" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
+                    <p style="margin-left: 0px; margin-bottom: 0px;">
+                    Fields groups
+                    </p>
+                </a>
+                <a href="#" id="addfieldgroup" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
+                    <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add</p>
+                </a>
+            </div>
+        </div>
+
+        <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
+            <div style="background: url('../img/section.png') no-repeat; background-size: contain;"></div>
+            <div>
+                <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
+                Page with input fields sections
+                </p>
+            </div>
+            <div>
+                <a href="#" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
+                    <p style="margin-left: 0px; margin-bottom: 0px;">
+                    Fields sections
+                    </p>
+                </a>
+                <a href="#" id="addfieldsection" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
+                    <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add</p>
+                </a>
+            </div>
+        </div>
+
+        <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
+            <div style="background: url('../img/autom.png') no-repeat; background-size: contain;"></div>
+            <div>
+                <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
+                Page with input fields automatizations
+                </p>
+            </div>
+            <div>
+                <a href="#" class="CTA white-matte" style="margin-left: 5px; padding: 5px 10px 5px 10px;">
+                    <p style="margin-left: 0px; margin-bottom: 0px;">
+                    Fields automatization
+                    </p>
+                </a>
+                <a href="#" id="addautom" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
+                    <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add</p>
+                </a>
+            </div>
         </div>
     </div>
-
-    <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
-        <div style="background: url('../img/group.png') no-repeat; background-size: contain;"></div>
-        <div>
-            <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
-              Page with dynamic input fields groups
-            </p>
-        </div>
-        <div>
-            <a href="#" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
-                <p style="margin-left: 0px; margin-bottom: 0px;">
-                  Fields groups
-                </p>
-            </a>
-            <a href="#" id="addfieldgroup" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
-                <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add</p>
-            </a>
-        </div>
-    </div>
-
-    <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
-        <div style="background: url('../img/section.png') no-repeat; background-size: contain;"></div>
-        <div>
-            <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
-              Page with input fields sections
-            </p>
-        </div>
-        <div>
-            <a href="#" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
-                <p style="margin-left: 0px; margin-bottom: 0px;">
-                  Fields sections
-                </p>
-            </a>
-            <a href="#" id="addfieldsection" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
-                <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add</p>
-            </a>
-        </div>
-    </div>
-
-    <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
-        <div style="background: url('../img/autom.png') no-repeat; background-size: contain;"></div>
-        <div>
-            <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
-              Page with input fields automatizations
-            </p>
-        </div>
-        <div>
-            <a href="#" class="CTA white-matte" style="margin-left: 5px; padding: 5px 10px 5px 10px;">
-                <p style="margin-left: 0px; margin-bottom: 0px;">
-                  Fields automatization
-                </p>
-            </a>
-            <a href="#" id="addautom" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
-                <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add</p>
-            </a>
-        </div>
-    </div>
-
     <script src="../public/js/fields.popup.js"></script>
   </body>
 </html>
