--- a/views/fields.popup.html
+++ b/views/fields.popup.html
@@ -27,13 +27,13 @@
             &#8592;
             </span>
         </a>
-        <p style="margin-left: 20px; margin-top: -20px;">
+        <p style="margin-left: 60px; margin-top: -25px;">
             Back
         </p>
 
-        <hr>
+        <hr style="border-top: 1px solid black;">
 
-        <div class="card block2 chooseblock">
+        <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 40px) 50%; grid-auto-rows: 40px; grid-row-gap: 10px; margin-top: -10px;">
             <div style="background: url('../img/fields.png') no-repeat; background-size: contain;"></div>
             <div>
                 <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
@@ -41,37 +41,41 @@
                 </p>
             </div>
             <div>
-                <a href="fieldssettings.popup.html" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
-                    <p style="margin-left: 0px; margin-bottom: 0px;">
+
+                <a href="fieldssettings.popup.html" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 10px 10px; display: inline-block;">
+                    <p style="margin-left: 0px; margin-bottom: 0px; font-size: 8px;">
                     Fields
                     </p>
                 </a>
-                <a href="addfield.popup.html" id="addfield" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
-                    <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add</p>
+                <a href="addfield.popup.html" id="addfield" class="CTA emerald" style="padding: 5px 10px 0px 10px;  display: inline-block; margin-left: 45px; margin-top: 5px;">
+                    <p style="font-size: 8px;">add</p>
                 </a>
+
             </div>
         </div>
 
-        <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
-            <div style="background: url('../img/group.png') no-repeat; background-size: contain;"></div>
+        <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 40px) 50%; grid-auto-rows: 40px; grid-row-gap: 10px;  margin-top: 10px;">
+            <div style="background: url('../img/group.jpg') no-repeat; background-size: contain;"></div>
             <div>
                 <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
                 Page with dynamic input fields groups
                 </p>
             </div>
             <div>
-                <a href="#" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
-                    <p style="margin-left: 0px; margin-bottom: 0px;">
+
+                <a href="#" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 10px 10px; display: inline-block;">
+                    <p style="margin-left: 0px; margin-bottom: 0px; font-size: 8px;">
                     Fields groups
                     </p>
                 </a>
-                <a href="#" id="addfieldgroup" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
-                    <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add</p>
+                <a href="#" id="addfieldgroup" class="CTA emerald" style="padding: 5px 10px 0px 10px;  display: inline-block; margin-left: 15px; margin-top: 5px;">
+                    <p style="font-size: 8px;">add</p>
                 </a>
+
             </div>
         </div>
 
-        <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
+        <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 40px) 50%; grid-auto-rows: 40px; grid-row-gap: 10px; margin-top: 10px;">
             <div style="background: url('../img/section.png') no-repeat; background-size: contain;"></div>
             <div>
                 <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
@@ -79,18 +83,20 @@
                 </p>
             </div>
             <div>
-                <a href="#" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 5px 10px;">
-                    <p style="margin-left: 0px; margin-bottom: 0px;">
+
+                <a href="#" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 10px 10px; display: inline-block;">
+                    <p style="margin-left: 0px; margin-bottom: 0px; font-size: 8px;">
                     Fields sections
                     </p>
                 </a>
-                <a href="#" id="addfieldsection" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
-                    <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add</p>
+                <a href="#" id="addfieldsection" class="CTA emerald" style="padding: 5px 10px 0px 10px;  display: inline-block; margin-left: 10px; margin-top: 5px;">
+                    <p style="font-size: 8px;">add</p>
                 </a>
+
             </div>
         </div>
 
-        <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 30px) calc( 50% - 30px); grid-auto-rows: 40px; grid-row-gap: 10px;">
+        <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 40px) 50%; grid-auto-rows: 40px; grid-row-gap: 10px; margin-top: 10px;">
             <div style="background: url('../img/autom.png') no-repeat; background-size: contain;"></div>
             <div>
                 <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
@@ -98,14 +104,16 @@
                 </p>
             </div>
             <div>
-                <a href="#" class="CTA white-matte" style="margin-left: 5px; padding: 5px 10px 5px 10px;">
-                    <p style="margin-left: 0px; margin-bottom: 0px;">
-                    Fields automatization
+
+                <a href="#" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 10px 10px; display: inline-block;">
+                    <p style="margin-left: 0px; margin-bottom: 0px; font-size: 8px;">
+                    Automatization
                     </p>
                 </a>
-                <a href="#" id="addautom" class="CTA emerald" style="padding: 5px 10px 5px 10px;">
-                    <p style="display: inline-block; font-size: 14px; margin-top: -5px;">add</p>
+                <a href="#" id="addautom" class="CTA emerald" style="padding: 5px 10px 0px 10px;  display: inline-block; margin-left: 10px; margin-top: 5px;">
+                    <p style="font-size: 8px;">add</p>
                 </a>
+                
             </div>
         </div>
     </div>
