--- a/views/fields.popup.html
+++ b/views/fields.popup.html
@@ -20,7 +20,7 @@
   <body>
     <div id="back">
     </div>
-    <div  style="padding: 10px; width: 280px;">
+    <div  style="padding: 10px; width: 100%;">
     
         <a href="popup.html" class="left-button white-matte">
             <span style="padding-left: 12px;">
