--- a/public/css/popup.css
+++ b/public/css/popup.css
@@ -49,7 +49,7 @@ hr .fs:after {
 
 .choosepop{
     padding: 5px 10px 5px 10px; 
-    width: 230px;
+    width: calc( 100% - 10px );
     margin-top: 10px;
 }
 
