--- a/views/fields.popup.html
+++ b/views/fields.popup.html
@@ -22,14 +22,23 @@
     </div>
     <div  style="padding: 10px; width: 100%;">
     
-        <a href="popup.html" class="left-button white-matte">
-            <span style="padding-left: 12px;">
-            &#8592;
-            </span>
-        </a>
-        <p style="margin-left: 60px; margin-top: -25px;">
-            Back
-        </p>
+        <div style="width: 100%; height: 30px; display: grid; grid-template-columns: 70px 40px calc( 100% - 100px ); grid-column-gap: 10px; padding: 5px;">
+            <div>
+                <a href="fields.popup.html" class="left-button white-matte">
+                    <span style="padding-left: 12px;">
+                    &#8592;
+                    </span>
+                </a>
+            </div>
+            <div>
+                <p style="padding-top: 7px;">
+                    Back
+                </p>
+            </div>
+            <div style="text-align: center;">
+                <h2>Fields menu</h2>
+            </div>
+        </div>
 
         <hr style="border-top: 1px solid black;">
 
