--- a/views/fieldssettings.popup.html
+++ b/views/fieldssettings.popup.html
@@ -21,12 +21,40 @@
     <div id="back">
     </div>
 
-    <form id="fieldsgroup" style="display: none;">
-        <div style="width: calc( 100% - 10px ); margin-left: 5px; height: 40px;">
-           <button id="fback" style="display: inline;">&#60;</button>
-           <hr class="fss">
+    <div style="width: 100%; height: 30px; display: grid; grid-template-columns: 70px 40px calc( 100% - 100px ); grid-column-gap: 10px; padding: 5px;">
+        <div>
+            <a href="fields.popup.html" class="left-button white-matte">
+                <span style="padding-left: 12px;">
+                &#8592;
+                </span>
+            </a>
         </div>
-    </form>
+        <div>
+            <p style="padding-top: 7px;">
+                Back
+            </p>
+        </div>
+        <div style="text-align: center;">
+            <h2>Fields list</h2>
+        </div>
+    </div>
+    
+    
+
+    <hr style="border-top: 1px solid black;">
+
+    <div style="padding: 5px; width: 100%; display: grid; grid-template-columns: 100%; grid-auto-rows: 30px; grid-row-gap: 10px;" id="fieldsgroup">
+            
+        <div class="blured radied" style="display: grid; grid-template-columns: 20px calc( 100% - 90px) 20px 20px; grid-auto-rows: 100%; padding: 5px; grid-column-gap: 10px;" id="fielddiv">
+            <div style="background: url('../img/dots.png') no-repeat; background-size: contain;"></div>
+            <div id="fieldtext">
+
+            </div>
+            <div style="background: url('../img/txt.png') no-repeat; background-size: contain;" id="fieldtype"></div>
+            <div style="background: url('../img/edit.png') no-repeat; background-size: contain;"></div>
+        </div>
+
+    </div>
     <script src="../public/js/fieldssettings.popup.js"></script>
   </body>
 </html>
