--- a/views/fields.popup.html
+++ b/views/fields.popup.html
@@ -51,7 +51,7 @@
             </div>
             <div>
 
-                <a href="fieldssettings.popup.html" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 10px 10px; display: inline-block;">
+                <a href="fieldlist.popup.html" class="CTA white-matte" style="margin-left: 5; padding: 5px 10px 10px 10px; display: inline-block;">
                     <p style="margin-left: 0px; margin-bottom: 0px; font-size: 8px;">
                     Fields
                     </p>
