--- a/views/addfield.popup.html
+++ b/views/addfield.popup.html
@@ -21,7 +21,7 @@
     <div id="back">
     </div>
 
-    <div style="width: 100%; height: 30px; display: grid; grid-template-columns: 70px 40px calc( 100% - 100px ); grid-column-gap: 10px; padding: 5px;">
+    <div style="width: calc( 100% - 30px ); height: 30px; display: grid; grid-template-columns: 70px 40px calc( 100% - 100px ); grid-column-gap: 10px; padding: 5px;">
         <div>
             <a href="fieldlist.popup.html" class="left-button white-matte">
                 <span style="padding-left: 12px;">
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <div style="width: 100%; padding: 5px;">
+    <div style="width: calc( 100% - 30px ); padding: 5px;">
     <form id="fieldsetting">
         
          <fieldset id="textsettings">
@@ -72,7 +72,7 @@
             
           </fieldset>
 
-          <fieldset class="dopgrid" style="width: calc( 100% - 10px );">
+          <fieldset class="dopgrid" style="width: calc( 100% - 30px );">
             <label for="nameset">Option value:</label>
             <input type="text" value="" id="optionset" style="width: 100%;">
           </fieldset>
@@ -101,7 +101,7 @@
             });
           </script>
          
-         <div style="width: 100%; padding: 5px; margin-top: 200px; position: sticky; height: 30px; display: grid; grid-template-columns: 50% 50%; grid-column-gap: 10px; grid-auto-rows: 30px;">
+         <div style="width: calc( 100% - 30px ); padding: 5px; margin-top: 200px; position: sticky; height: 30px; display: grid; grid-template-columns: 50% 50%; grid-column-gap: 10px; grid-auto-rows: 30px;">
             <div>
                 <button id="settingset" class="CTA emerald" style="padding: 5px 10px 0px 10px; width: calc( 100% - 20px ); text-align: center;">
                     <p style="font-size: 14px;">Edit</p>
