--- a/views/fields.popup.html
+++ b/views/fields.popup.html
@@ -20,11 +20,11 @@
   <body>
     <div id="back">
     </div>
-    <div  style="padding: 10px; width: 100%;">
+    <div  style="padding: 10px; width: calc( 100% - 30px );">
     
         <div style="width: 100%; height: 30px; display: grid; grid-template-columns: 70px 40px calc( 100% - 100px ); grid-column-gap: 10px; padding: 5px;">
             <div>
-                <a href="fields.popup.html" class="left-button white-matte">
+                <a href="popup.html" class="left-button white-matte">
                     <span style="padding-left: 12px;">
                     &#8592;
                     </span>
@@ -42,7 +42,7 @@
 
         <hr style="border-top: 1px solid black;">
 
-        <div class="card block2" style="width: calc( 100% - 10px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 40px) 50%; grid-auto-rows: 40px; grid-row-gap: 10px; margin-top: -10px;">
+        <div class="card block2" style="width: calc( 100% - 30px ); height: 42px; display: grid; grid-template-columns: 40px calc( 50% - 40px) 50%; grid-auto-rows: 40px; grid-row-gap: 10px; margin-top: -10px;">
             <div style="background: url('../img/fields.png') no-repeat; background-size: contain;"></div>
             <div>
                 <p style="font-size: 10px; line-height: normal; margin-left: 15px; margin-top: 3px;">
